--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "antd": "^5.9.2",
     "autoprefixer": "10.4.16",
     "axios": "^1.5.0",
+    "export-from-json": "^1.7.3",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-export-json-csv": "1.0.1-3.1",
     "react-query": "^3.39.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
