--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.9.2",
     "autoprefixer": "10.4.16",
     "axios": "^1.5.0",
+    "dotenv": "^16.3.1",
     "export-from-json": "^1.7.3",
     "next": "13.5.2",
     "postcss": "8.4.30",
